--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(190, 68, 68);
+  background-color: rgb(184, 169, 169);
 }
 
 code {
@@ -51,7 +51,6 @@ img {
 .buttonPlus {
   background-color: rgb(151, 151, 233);
   margin-top: 77px;
-  margin-left: 850px;
 
   color: green;
   cursor: pointer;
@@ -114,6 +113,18 @@ img {
 }
 
 @media only screen and (max-width: 480px) {
+  .container {
+    grid-template-columns: auto;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: auto;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: auto;
   }
